--- a/README.org
+++ b/README.org
@@ -24,7 +24,7 @@ Mozilla Public License, version 2.0 - See LICENSE or [[https://www.mozilla.org/e
    - DirEntries x8
 
 ** Class diagram
- #+begin_src plantuml :file images/classdiagram.png
+ #+begin_src plantuml :file images/classdiagram.png :exports results
 
  class fs_block {
 	 data: uint8_t[512]
@@ -128,4 +128,3 @@ Mozilla Public License, version 2.0 - See LICENSE or [[https://www.mozilla.org/e
 
  #+RESULTS:
  [[file:images/classdiagram.png]]
-
